--- a/diapos/SFA_Componentes.tex
+++ b/diapos/SFA_Componentes.tex
@@ -1,4 +1,4 @@
-% Created 2018-01-12 vie 00:19
+% Created 2018-04-09 lun 18:26
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -30,6 +30,8 @@
 \newunit{\amperehour}{Ah}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\beamertemplatenavigationsymbolsempty
+\setbeamertemplate{footline}[frame number]
 \setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
@@ -43,50 +45,50 @@
  pdftitle={Sistemas Fotovoltaicos Autónomos},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.6)}, 
+ pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Conceptos Generales}
-\label{sec:orgba2c4d4}
+\label{sec:org8652583}
 
-\begin{frame}[label={sec:orge1db5ef}]{Definición de un Sistema Autónomo}
+\begin{frame}[label={sec:orgb9ba6fa}]{Definición de un Sistema Autónomo}
 Un sistema fotovoltaico autónomo (SFA) produce energía eléctrica para \alert{satisfacer el consumo de cargas eléctricas no conectadas a la red}, \alert{empleando un sistema de acumulación energético} para hacer frente a los períodos en los que la generación es inferior al consumo.
 \end{frame}
 
-\begin{frame}[label={sec:org0356d8c}]{Configuracion SHS}
+\begin{frame}[label={sec:org5f8920e}]{Configuracion SHS}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_DC.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2dfa709}]{Configuración AC}
+\begin{frame}[label={sec:org912e4b6}]{Configuración AC}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_AC.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org677bc3c}]{Configuración DC+AC}
+\begin{frame}[label={sec:org7c8024a}]{Configuración DC+AC}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_AC_DC.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6c43b9a}]{Sistema Híbrido}
+\begin{frame}[label={sec:org531aa80}]{Sistema Híbrido}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DiagramaUnifilarER_Hibrido.pdf}
 \end{center}
 \end{frame}
 
 \section{Acumulador Electroquímico}
-\label{sec:org0856b40}
+\label{sec:org4ba222b}
 
 \subsection{Definiciones}
-\label{sec:orgeba8696}
+\label{sec:org2d20b3f}
 
-\begin{frame}[label={sec:org486091f}]{Acumulador electroquímico}
+\begin{frame}[label={sec:org959302f}]{Acumulador electroquímico}
 Un acumulador electroquímico es una bateria secundaria o recargable, capaz de almacenar energía eléctrica mediante una transformación en energía electroquímica. Sus principales funciones son:
 
 \begin{itemize}
@@ -98,7 +100,7 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgd67c29e}]{Definiciones}
+\begin{frame}[label={sec:orgc12cc09}]{Definiciones}
 \begin{description}
 \item[{Capacidad nominal (\(C_{nom}\))}] es la carga eléctrica que puede ser extraída de una batería hasta llegar a la descarga total.
 
@@ -108,7 +110,7 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:org5e60268}]{Definiciones}
+\begin{frame}[label={sec:org6dfeeb3}]{Definiciones}
 \begin{description}
 \item[{Profundidad de descarga (PD)}] es el complemento del estado de carga.
 
@@ -116,7 +118,7 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orge45fbea}]{Definiciones}
+\begin{frame}[label={sec:org11a21d8}]{Definiciones}
 \begin{description}
 \item[{Eficiencia farádica}] es el ratio entre la carga extraída durante la descarga y la carga requerida para restablecer el estado inicial.
 
@@ -125,9 +127,9 @@ Un acumulador electroquímico es una bateria secundaria o recargable, capaz de a
 \end{frame}
 
 \subsection{Principios de funcionamiento}
-\label{sec:org111cbca}
+\label{sec:org74599c2}
 
-\begin{frame}[label={sec:org1cdd909}]{Composición}
+\begin{frame}[label={sec:orgdfa7fc8}]{Composición}
 Una batería de ácido-plomo se compone de:
 
 \begin{itemize}
@@ -145,7 +147,7 @@ Una batería de ácido-plomo se compone de:
 
 
 
-\begin{frame}[label={sec:org62b453f}]{Reacción Química REDOX}
+\begin{frame}[label={sec:org581281e}]{Reacción Química REDOX}
 \begin{itemize}
 \item Ánodo (+):
 \end{itemize}
@@ -176,7 +178,7 @@ PbSO_{4}+2e^{-}}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf54fabe}]{Descarga}
+\begin{frame}[label={sec:org0e3e30c}]{Descarga}
 \[
 \mathrm{Pb+PbO_{2}+2H_{2}SO_{4}} \rightarrow \mathrm{2PbSO_{4}+2H_{2}O}
 \]
@@ -192,7 +194,7 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge076ed2}]{Carga}
+\begin{frame}[label={sec:orge60bbdb}]{Carga}
 \[
 \mathrm{2PbSO_{4}+2H_{2}O} \rightarrow \mathrm{Pb+PbO_{2}+2H_{2}SO_{4}} 
 \]
@@ -217,8 +219,8 @@ PbSO_{4}+2e^{-}}
 \end{frame}
 
 \subsection{Modelo eléctrico}
-\label{sec:org5812d40}
-\begin{frame}[label={sec:orgcc2e6c2}]{Fuente de tensión}
+\label{sec:orgabf9ea5}
+\begin{frame}[label={sec:org952bef1}]{Fuente de tensión}
 \begin{itemize}
 \item Una batería de ácido-plomo puede ser modelada como una fuente de tensión, \(V_{BI}\), en serie con una resistencia, \(R_{BI}\).
 \end{itemize}
@@ -228,7 +230,7 @@ PbSO_{4}+2e^{-}}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge99417d}]{Densidad del electrolito y Tensión en Abierto}
+\begin{frame}[label={sec:orgfc91251}]{Densidad del electrolito y Tensión en Abierto}
 \begin{block}{La medida de la tensión en circuito abierto de la batería es un método común para estimar el estado de carga de una batería.}
 \begin{itemize}
 \item \(V_{BI}=\rho_{e}+0.84\)
@@ -244,13 +246,13 @@ PbSO_{4}+2e^{-}}
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org9c2493c}]{Evolución de la tensión durante un proceso de descarga}
+\begin{frame}[label={sec:orgb77ef12}]{Evolución de la tensión durante un proceso de descarga}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bateria_SOCyDescarga.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org9a226ea}]{Evolución de la tensión en un proceso de carga}
+\begin{frame}[label={sec:org9c98de7}]{Evolución de la tensión en un proceso de carga}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bateria_CorrYTemp.pdf}
 \end{center}
@@ -258,9 +260,9 @@ PbSO_{4}+2e^{-}}
 
 
 \subsection{Efecto de la temperatura}
-\label{sec:org23e6115}
+\label{sec:org109fbd4}
 
-\begin{frame}[label={sec:org1e3d113}]{Temperatura baja}
+\begin{frame}[label={sec:orgcac15d5}]{Temperatura baja}
 \begin{itemize}
 \item El electrolito se hace más viscoso y decrece la movilidad de los iones (aumenta la resistencia eléctrica)
 
@@ -270,7 +272,7 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge5ac5e4}]{Temperatura alta}
+\begin{frame}[label={sec:orgd3c56bb}]{Temperatura alta}
 \begin{itemize}
 \item \alert{Acelera las reacciones, favoreciendo la corrosión}. Por tanto, decrece la vida de la batería.
 
@@ -284,15 +286,15 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org69ea7f7}]{Capacidad según el regimen de descarga y la temperatura}
+\begin{frame}[label={sec:org2d49939}]{Capacidad según el regimen de descarga y la temperatura}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Bateria_Capacidad.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Ciclado}
-\label{sec:orge4aebc2}
-\begin{frame}[label={sec:org86c6871}]{Definición}
+\label{sec:orge6500a6}
+\begin{frame}[label={sec:orgb3b9b0a}]{Definición}
 \begin{itemize}
 \item El ciclado es el \alert{proceso} por el que un acumulador es \alert{continuamente cargado y descargado durante su vida.}
 
@@ -300,7 +302,7 @@ PbSO_{4}+2e^{-}}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgca9e363}]{Resistencia al ciclado}
+\begin{frame}[label={sec:org8cfeca5}]{Resistencia al ciclado}
 Los factores que influyen sobre la resistencia del acumulador al ciclado son: 
 \begin{itemize}
 \item \alert{La profundidad de descarga}: las descargas profundas disminuyen los ciclos de vida de una batería.
@@ -313,15 +315,15 @@ Los factores que influyen sobre la resistencia del acumulador al ciclado son:
 
 
 \subsection{Composición}
-\label{sec:org65118d2}
+\label{sec:org896fc2c}
 
-\begin{frame}[label={sec:org8228a0d}]{Composición}
+\begin{frame}[label={sec:org1ec3305}]{Composición}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AcumuladorBN.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org1708039}]{Rejillas}
+\begin{frame}[label={sec:org2e5b8d8}]{Rejillas}
 \begin{itemize}
 \item Dan \alert{soporte estructural a los materiales activos}
 
@@ -341,7 +343,7 @@ ciclado y en descarga profunda.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgeb67269}]{Materiales activos}
+\begin{frame}[label={sec:org34d8cf9}]{Materiales activos}
 \begin{itemize}
 \item Los materiales activos participan en las reacciones químicas.
 \item Están \alert{adheridos a las rejillas}.
@@ -349,7 +351,7 @@ ciclado y en descarga profunda.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6112114}]{Electrolito}
+\begin{frame}[label={sec:org573ca5a}]{Electrolito}
 \begin{itemize}
 \item El \alert{electrolito} participa en la reacción y \alert{realiza el transporte
 iónico} para cerrar el ciclo de corriente de las reacciones.
@@ -368,7 +370,7 @@ los de arranque (altos regímenes de descarga).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org6aada3d}]{Separadores}
+\begin{frame}[label={sec:orga7e4a4a}]{Separadores}
 \begin{itemize}
 \item Los separadores \alert{aislan las placas de diferente polaridad pero
 permiten el movimiento iónico a través suyo}.
@@ -384,9 +386,9 @@ permiten el movimiento iónico a través suyo}.
 \end{frame}
 
 \subsection{Tipos de acumuladores}
-\label{sec:org74b34c7}
+\label{sec:orge366012}
 
-\begin{frame}[label={sec:orgd54c7ab}]{Características generales}
+\begin{frame}[label={sec:org20da003}]{Características generales}
 \begin{itemize}
 \item Un acumulador incorporado a un SFA debe ser \alert{capaz de funcionar sometido a ciclados diarios y anuales de carga y descarga}, teniendo en cuenta que la carga entregada por el generador depende directamente de la radiación (variable en los períodos intradiario e intraanual).
 
@@ -396,7 +398,7 @@ permiten el movimiento iónico a través suyo}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org969b15f}]{Baterías de arranque}
+\begin{frame}[label={sec:org8c73e3a}]{Baterías de arranque}
 \begin{itemize}
 \item Habitualmente empleadas en automóviles
 
@@ -412,7 +414,7 @@ permiten el movimiento iónico a través suyo}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge1791cd}]{Baterías de tracción}
+\begin{frame}[label={sec:org360d8d7}]{Baterías de tracción}
 \begin{itemize}
 \item Empleadas, por ejemplo, en carretillas elevadoras.
 
@@ -424,7 +426,7 @@ permiten el movimiento iónico a través suyo}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org17d8713}]{Baterías estacionarias}
+\begin{frame}[label={sec:orga06cd6e}]{Baterías estacionarias}
 \begin{itemize}
 \item Empleadas en sistemas de alimentación ininterrumpida (UPS) o instalaciones remotas (por ejemplo, radioenlaces).
 
@@ -438,7 +440,7 @@ permiten el movimiento iónico a través suyo}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org28ab366}]{Elección de batería}
+\begin{frame}[label={sec:orgbe353c4}]{Elección de batería}
 \begin{itemize}
 \item Criterios a tener en cuenta:
 
@@ -467,13 +469,13 @@ rejilla y vaso transparente.
 \end{frame}
 
 \section{Regulador de carga}
-\label{sec:orgba11ea8}
+\label{sec:org707f434}
 
-\begin{frame}[label={sec:org0793d7b}]{Definición}
+\begin{frame}[label={sec:orga054f04}]{Definición}
 Un regulador de carga es un equipo electrónico capaz de \alert{evitar la sobrecarga y la descarga excesiva de un acumulador} desconectando al acumulador del generador o del consumo \alert{cuando se alcanzan determinados estados umbral, generalmente determinados por la tensión en bornes}.
 \end{frame}
 
-\begin{frame}[label={sec:orgbfb6463}]{Regulador Serie y paralelo}
+\begin{frame}[label={sec:org0a9bdcb}]{Regulador Serie y paralelo}
 \begin{itemize}
 \item Regulador Serie
 \end{itemize}
@@ -490,7 +492,7 @@ Un regulador de carga es un equipo electrónico capaz de \alert{evitar la sobrec
 \end{frame}
 
 
-\begin{frame}[label={sec:org6b5b458}]{Ciclo de carga}
+\begin{frame}[label={sec:org7736314}]{Ciclo de carga}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/HisteresisCargaRegulador.pdf}
 \end{center}
@@ -504,7 +506,7 @@ Un regulador de carga es un equipo electrónico capaz de \alert{evitar la sobrec
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgc888fbb}]{Ciclo de descarga}
+\begin{frame}[label={sec:orge6b5944}]{Ciclo de descarga}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/HisteresisDescargaRegulador.pdf}
 \end{center}
@@ -513,9 +515,9 @@ Los umbrales deben adaptarse a cada tipo de batería (mediante ensayos, o recome
 \end{frame}
 
 \section{Luminarias}
-\label{sec:org6266f10}
+\label{sec:orgadca7d5}
 
-\begin{frame}[label={sec:org4c0be50}]{Funcionamiento}
+\begin{frame}[label={sec:org738dbc7}]{Funcionamiento}
 \begin{itemize}
 \item Una lámpara fluorescente convencional está formada por un \alert{tubo de descarga con gas a baja presión}, un \alert{recubrimiento de una mezcla de polvos fluorescentes} y \alert{dos electrodos} en los extremos.
 
@@ -529,14 +531,14 @@ Los umbrales deben adaptarse a cada tipo de batería (mediante ensayos, o recome
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3265f0b}]{Degradación}
+\begin{frame}[label={sec:org43bc846}]{Degradación}
 \begin{itemize}
 \item \alert{El proceso de encendido es el que más contribuye a la degradación} de los tubos fluorescentes.
 \item Un método alternativo consiste en \alert{precalentar los electrodos} (con un circuito basado en un condensador y en una resistencia) facilitando el paso a la etapa de emisión termoiónica, y acortando el período de encencedido.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org3eb91fc}]{Fotometría}
+\begin{frame}[label={sec:orgb692a4e}]{Fotometría}
 \begin{description}
 \item[{Flujo}] radiante es la potencia emitida por la fuente luminosa (Unidad: Watio)
 
@@ -548,7 +550,7 @@ Los umbrales deben adaptarse a cada tipo de batería (mediante ensayos, o recome
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orgdfbf88a}]{Requisitos}
+\begin{frame}[label={sec:org8be2a40}]{Requisitos}
 \begin{itemize}
 \item Recomendable eficiencia superior a 50 \(\si{\lumen\per\watt}\)
 
