--- a/diapos/SFA_Diseno.tex
+++ b/diapos/SFA_Diseno.tex
@@ -1,4 +1,4 @@
-% Created 2018-01-12 vie 01:00
+% Created 2018-04-09 lun 18:26
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -30,6 +30,8 @@
 \newunit{\amperehour}{Ah}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\beamertemplatenavigationsymbolsempty
+\setbeamertemplate{footline}[frame number]
 \setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
@@ -43,15 +45,15 @@
  pdftitle={Sistemas Fotovoltaicos Autónomos},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.6)}, 
+ pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Dimensionado del SFA}
-\label{sec:orgfec6fe2}
-\begin{frame}[label={sec:org71b7e0d}]{Objetivo}
+\label{sec:org5d06901}
+\begin{frame}[label={sec:orgceca8b9}]{Objetivo}
 \begin{itemize}
 \item El dimensionado de un SFA consiste en \alert{decidir el tamaño del
 generador fotovoltaico y acumulador} que serán capaces de
@@ -68,8 +70,8 @@ sistema.
 
 
 \subsection{Nomenclatura}
-\label{sec:orgf3d6205}
-\begin{frame}[label={sec:orgc126118}]{Carga}
+\label{sec:org0effe48}
+\begin{frame}[label={sec:org57c246b}]{Carga}
 \begin{description}
 \item[{Consumo:}] \(L\)
 
@@ -80,7 +82,7 @@ funcionamiento.$$LLP=\frac{E_{def}}{L}$$
 \end{description}
 \end{frame}
 
-\begin{frame}[label={sec:orga924e4a}]{Capacidades normalizadas}
+\begin{frame}[label={sec:org2ec6f2e}]{Capacidades normalizadas}
 \begin{description}
 \item[{Capacidad del generador:}] relación entre los valores medios de la
 energía que puede producir el generador y la energía consumida por la
@@ -93,8 +95,8 @@ $$C_{s}=\frac{C_{U}}{L}=\frac{C_{B}\cdot PD_{max}}{L}$$
 \end{frame}
 
 \subsection{Objetivo}
-\label{sec:orgdc36600}
-\begin{frame}[label={sec:org0ae340d}]{Dimensionado}
+\label{sec:org2d2415d}
+\begin{frame}[label={sec:org3a4ba04}]{Dimensionado}
 \begin{block}{La tarea de dimensionar un sistema fotovoltaico consiste en encontrar la mejor solución de compromiso entre coste y fiabilidad.}
 \begin{itemize}
 \item Diferentes valores de \((C_{A},\, C_{S})\) pueden conducir al mismo
@@ -108,8 +110,8 @@ coste.
 
 
 \subsection{Ejemplos}
-\label{sec:orge307d34}
-\begin{frame}[label={sec:orgb07567a}]{Generador grande, acumulador pequeño}
+\label{sec:org323c0b7}
+\begin{frame}[label={sec:org9c78e01}]{Generador grande, acumulador pequeño}
 \begin{itemize}
 \item La \alert{combinación de \(C_{A}\) alta y \(C_{S}\) baja} conduce a ciclados
 diarios con descargas profundas y ciclados estacionales
@@ -127,7 +129,7 @@ controladas aplicando el mantenimiento adecuado.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org74e0fb0}]{Generador pequeño, acumulador grande}
+\begin{frame}[label={sec:orgf37cd9c}]{Generador pequeño, acumulador grande}
 \begin{itemize}
 \item La \alert{combinación de \(C_{A}\) baja y \(C_{S}\) alta} conduce a ciclados
 diarios con descargas moderadas y ciclados estacionales largos.
@@ -145,7 +147,7 @@ tan fácilmente compensada.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgad455d6}]{Sistemas Híbridos}
+\begin{frame}[label={sec:org7b2f46b}]{Sistemas Híbridos}
 \begin{itemize}
 \item Cuando \(LLP\) es muy alta (p.e. radioenlaces) o la demanda es muy
 elevada (poblados) el generador y acumulador serán excesivamente
@@ -167,8 +169,8 @@ grupo: gasto en combustible y mantenimiento.
 \end{frame}
 
 \subsection{Métodos de dimensionado}
-\label{sec:org8f18734}
-\begin{frame}[label={sec:org4eab097}]{Métodos de dimensionado}
+\label{sec:org0a2b559}
+\begin{frame}[label={sec:orge5d688b}]{Métodos de dimensionado}
 \begin{block}{Método del LLP}
 A partir de simulaciones o de curvas de isofiabilidad, establece los
 valores de \(C_{A}\) y \(C_{S}\) para un consumo determinado.
@@ -183,13 +185,13 @@ valores de \(C_{A}\) y \(C_{S}\) para un consumo determinado.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org510fc10}]{Método del LLP}
+\begin{frame}[label={sec:org147d2b0}]{Método del LLP}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CurvasLLP.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgf3c6b1d}]{Relación entre tamaño de generador y LLP}
+\begin{frame}[label={sec:org75bc169}]{Relación entre tamaño de generador y LLP}
 \begin{itemize}
 \item \(C_{s}=3\)
 \end{itemize}
@@ -199,7 +201,7 @@ valores de \(C_{A}\) y \(C_{S}\) para un consumo determinado.
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgaebd85e}]{Método de LLP}
+\begin{frame}[label={sec:orgf700976}]{Método de LLP}
 \begin{itemize}
 \item Este proceso de cálculo se apoya en series de valores de radiación
 solar que reproducen el comportamiento estadístico de la
@@ -217,7 +219,7 @@ inferiores a \(LLP=\num{1e-2}\) carecen de utilidad.
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org7f87dd6}]{Método del mes peor}
+\begin{frame}[label={sec:orge079e9b}]{Método del mes peor}
 \begin{block}{Valores según el UTS for SHS}
 \begin{itemize}
 \item Electrificación rural:
@@ -240,8 +242,8 @@ inferiores a \(LLP=\num{1e-2}\) carecen de utilidad.
 \end{frame}
 
 \subsection{Configuración de generador y batería}
-\label{sec:org6793318}
-\begin{frame}[label={sec:orgef32084}]{Configuración de generador y batería}
+\label{sec:org0989d62}
+\begin{frame}[label={sec:org8b44350}]{Configuración de generador y batería}
 \begin{itemize}
 \item Una vez elegidos los valores de \(C_{A}\) y \(C_{S}\), se deben
 configurar el generador y batería de acuerdo a las tensiones de
@@ -257,7 +259,7 @@ Q_L = L / V_b
 \]
 \end{frame}
 
-\begin{frame}[label={sec:orgab57d68}]{Batería}
+\begin{frame}[label={sec:orge0a3890}]{Batería}
 \begin{itemize}
 \item Capacidad en Ah (es recomendable no usar baterías en paralelo)
 \end{itemize}
@@ -271,7 +273,7 @@ Q_B = \frac{C_S \cdot Q_L}{PD}
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb7aff2a}]{Generador}
+\begin{frame}[label={sec:org425aec1}]{Generador}
 \begin{itemize}
 \item Capacidad del generador
 \end{itemize}
@@ -294,7 +296,7 @@ I_{g}^{*} &=  \frac{C_{A}\cdot Q_{L}\cdot G_{stc}}{\overline{G_{d}}(\beta,\alpha
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org967fca2}]{Inclinación del generador}
+\begin{frame}[label={sec:org17f1579}]{Inclinación del generador}
 \begin{itemize}
 \item Para instalaciones con \alert{consumos constantes o similares a lo largo del año}, se busca maximizar la radiación en los meses de menor insolación $$\beta=|\phi|+10^{\circ}$$
 
@@ -307,11 +309,11 @@ I_{g}^{*} &=  \frac{C_{A}\cdot Q_{L}\cdot G_{stc}}{\overline{G_{d}}(\beta,\alpha
 \end{frame}
 
 \section{Consumo}
-\label{sec:orga267e17}
+\label{sec:orgcba67d2}
 
 \subsection{Estimación del consumo}
-\label{sec:org86737df}
-\begin{frame}[label={sec:org93bb2cb}]{Cálculo del consumo}
+\label{sec:org9ea9d8c}
+\begin{frame}[label={sec:org20166e5}]{Cálculo del consumo}
 \begin{itemize}
 \item Energía total requerida por las cargas
 \end{itemize}
@@ -327,13 +329,13 @@ Como valores orientativos pueden utilizarse
 \(\eta_{inv}=0.9\), \(\eta_{r}=0.95\), \(\eta_{bat}=0.85\) y \(\eta_{c}=0.98\).
 \end{frame}
 
-\begin{frame}[label={sec:org4362b42}]{Distribución del consumo}
+\begin{frame}[label={sec:org7a6ad2c}]{Distribución del consumo}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ConsumoGamma.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgc55f03b}]{Relación entre el consumo y la fiabilidad}
+\begin{frame}[label={sec:orgadb8b8d}]{Relación entre el consumo y la fiabilidad}
 \begin{itemize}
 \item La variación en el consumo se amplifica en la variación de la LLP.
 \item Diseño robusto: funcionamiento en amplio abanico de condiciones (ambientales y humanas).
@@ -344,8 +346,8 @@ Como valores orientativos pueden utilizarse
 \end{frame}
 
 \subsection{Escenarios de Consumo}
-\label{sec:orgd90c915}
-\begin{frame}[label={sec:orgcf9d282}]{SHS 1}
+\label{sec:orge5a6fe3}
+\begin{frame}[label={sec:org1bfdcab}]{SHS 1}
 \begin{block}{120 Wh/dia}
 \begin{itemize}
 \item Iluminación
@@ -366,7 +368,7 @@ C_{A} & = & 1.1\\
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgb76fcf2}]{SHS 2}
+\begin{frame}[label={sec:org7b3d8e3}]{SHS 2}
 \begin{block}{250 Wh/dia}
 \begin{itemize}
 \item Iluminación
@@ -387,7 +389,7 @@ C_{A} & = & 1.1\\
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org81dfb64}]{SHS 3}
+\begin{frame}[label={sec:orgc71c9dc}]{SHS 3}
 \begin{block}{1000 Wh/dia}
 \begin{itemize}
 \item Iluminación
@@ -408,7 +410,7 @@ C_{S} & = & 5
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:orgd852b41}]{Centrales}
+\begin{frame}[label={sec:orgca77897}]{Centrales}
 \begin{block}{}
 \begin{itemize}
 \item Todo AC
