--- a/diapos/SFCR_ProductividadSombras.tex
+++ b/diapos/SFCR_ProductividadSombras.tex
@@ -1,4 +1,4 @@
-% Created 2018-01-18 jue 22:29
+% Created 2018-04-09 lun 18:27
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -30,6 +30,8 @@
 \newunit{\amperehour}{Ah}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
 \renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\beamertemplatenavigationsymbolsempty
+\setbeamertemplate{footline}[frame number]
 \setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
@@ -42,19 +44,19 @@
  pdftitle={SFCR: Productividad y Sombras},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 25.2.2 (Org mode 9.1.6)}, 
+ pdfcreator={Emacs 25.2.2 (Org mode 9.1.9)}, 
  pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Energía Producida por un SFCR}
-\label{sec:org4be0343}
+\label{sec:orgab82b3f}
 
 \subsection{Procedimiento de cálculo}
-\label{sec:org451dc4b}
+\label{sec:orgd35a87a}
 
-\begin{frame}[label={sec:orgd18269c}]{Potencia en un SFCR}
+\begin{frame}[label={sec:org27a8389}]{Potencia en un SFCR}
 \begin{itemize}
 \item \alert{Potencia} a la Salida del Generador FV
 \end{itemize}
@@ -76,7 +78,7 @@ $$E_{ac} = \int_T \frac{\eta_g(G_{ef}, T_a)}{\eta_g^*} \cdot
       \frac{G_{ef}}{G^*} \cdot \eta_{inv}(G_{ef}, T_a) \cdot P_g^*\quad \mathrm{dt}$$
 \end{frame}
 
-\begin{frame}[label={sec:org01fb441}]{Energía producida}
+\begin{frame}[label={sec:orgf6f0688}]{Energía producida}
 $$E_{ac}=P_{g}^{*}\cdot\frac{G_{ef}}{G^*}\cdot PR\cdot (1-FS)$$
 
 \begin{itemize}
@@ -98,14 +100,14 @@ generador
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org2ce3765}]{Productividad}
+\begin{frame}[label={sec:org1e07ef1}]{Productividad}
 En algunas ocasiones se habla de \alert{productividad} del sistema, \(Y_{f}\),
 que es el cociente entre energía producida y potencia nominal del
 \alert{generador}:
 $$Y_{f}=\frac{E_{ac}}{P_{g}^{*}}\,(\si{\kilo\watthour\per\kilo\wattpeak})$$
 \end{frame}
 
-\begin{frame}[label={sec:orgf24fa52}]{Performance Ratio}
+\begin{frame}[label={sec:orgd2c9226}]{Performance Ratio}
 \begin{itemize}
 \item Está concebido para incluir todas las \alert{pérdidas que no tienen
 dependencia con las condiciones meteorológicas}.
@@ -122,7 +124,7 @@ con la relación entre potencia e irradiancia, \alert{suele aceptarse} que el
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org9d729b9}]{Performance Ratio}
+\begin{frame}[label={sec:org1d398d2}]{Performance Ratio}
 \begin{block}{Desglose de pérdidas}
 \begin{itemize}
 \item \alert{Dispersión de parámetros} entre los módulos que componen el
@@ -144,7 +146,7 @@ características nominales (3\%)
 \end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org3be08b0}]{Performance Ratio}
+\begin{frame}[label={sec:org179adc8}]{Performance Ratio}
 \begin{block}{Valores reales}
 \begin{itemize}
 \item El análisis de funcionamiento de diversos sistemas FV europeos ha
@@ -161,7 +163,7 @@ sido de 0,8}.
 \end{frame}
 
 
-\begin{frame}[label={sec:orgb7f5800}]{Factor de sombras}
+\begin{frame}[label={sec:org94c42e9}]{Factor de sombras}
 \begin{itemize}
 \item \alert{El factor de sombras suele tomar valores alrededor del 2 al 4\%},
 tanto en instalaciones estáticas como de seguimiento.
@@ -173,27 +175,27 @@ con un nivel de ocupación de terreno superior al óptimo).
 \end{frame}
 
 \section{Sombras y ocupación de terreno}
-\label{sec:orge3f7608}
+\label{sec:orgb12641e}
 
 \subsection{Sombras Lejanas}
-\label{sec:org2441c91}
+\label{sec:org443fbbd}
 
-\begin{frame}[label={sec:org30af572}]{Sombras en el horizonte}
+\begin{frame}[label={sec:org2d647ab}]{Sombras en el horizonte}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombraIES.pdf}
 \end{center}
 \end{frame}
 
 \subsection{Sombras Cercanas: sistemas estáticos}
-\label{sec:org07362e6}
+\label{sec:orgc1bf313}
 
-\begin{frame}[label={sec:orgd60268b}]{Sombras entre filas}
+\begin{frame}[label={sec:org1fb5626}]{Sombras entre filas}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombraEstaticaInclinado2.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org16848bd}]{Sombras entre filas}
+\begin{frame}[label={sec:org94b6ee8}]{Sombras entre filas}
 \begin{itemize}
 \item Suele establecerse un objetivo de \alert{4 horas de sol en torno al mediodía del solsticio de invierno libres de sombra}.
 
@@ -210,10 +212,10 @@ $$d_{min}=\frac{h}{\tan(61\degree-\phi)}$$
 \end{frame}
 
 \subsection{Sombras Cercanas: sistemas de seguimiento 2X}
-\label{sec:orgd19c199}
+\label{sec:org0d74dae}
 
 
-\begin{frame}[label={sec:org3d10ae9}]{Separación de seguidores Doble Eje}
+\begin{frame}[label={sec:org44c524d}]{Separación de seguidores Doble Eje}
 \begin{center}
 \includegraphics[height=0.5\textheight]{../figs/Sombras2X.pdf}
 \end{center}
@@ -232,7 +234,7 @@ $$E_{ac}=f(ROT)??$$
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orge275e0e}]{Radiación promedio}
+\begin{frame}[label={sec:org43aa7fc}]{Radiación promedio}
 $$G_{ef, av} = 1/24 \cdot \left( 10 \cdot G_{ef,0} + 5 \cdot G_{ef,A} + G_{ef,B} + 2 \cdot G_{ef,C} + G_{ef,D} + 5 \cdot G_{ef,E} \right)$$
 
 \begin{columns}
@@ -251,7 +253,7 @@ $$G_{ef, av} = 1/24 \cdot \left( 10 \cdot G_{ef,0} + 5 \cdot G_{ef,A} + G_{ef,B}
 \end{frame}
 
 
-\begin{frame}[label={sec:org3bee000}]{Separación de Seguidores Doble Eje}
+\begin{frame}[label={sec:org52c99a0}]{Separación de Seguidores Doble Eje}
 $$b=\frac{L}{W}=0.475$$
 
 $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
@@ -263,9 +265,9 @@ $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
 
 
 \subsection{Sombras Cercanas: Seguidores de eje horizontal NS}
-\label{sec:orgfa8c97a}
+\label{sec:org5414c98}
 
-\begin{frame}[label={sec:org2d6347a}]{Separación de Seguidores Eje Horizontal}
+\begin{frame}[label={sec:org7dbe8f8}]{Separación de Seguidores Eje Horizontal}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SombrasHoriz.pdf}
 \end{center}
@@ -273,13 +275,13 @@ $$ROT=\frac{L_{ns}\cdot L_{eo}}{L \cdot W}$$
 $$W=\infty$$ $$ROT=L_{eo}/L$$
 \end{frame}
 
-\begin{frame}[label={sec:orgd31c119}]{Separación de Seguidores Horizontal N-S}
+\begin{frame}[label={sec:orgf4b7eae}]{Separación de Seguidores Horizontal N-S}
 \begin{center}
 \includegraphics[angle=90,width=.9\linewidth]{../figs/AbacoSeguidorHorizSombra_Ene10.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgfc88e35}]{Backtracking}
+\begin{frame}[label={sec:org866a460}]{Backtracking}
 \begin{itemize}
 \item El \alert{sombreado} en un generador puede producir problemas por el efecto
 de \alert{punto caliente}.
@@ -302,19 +304,19 @@ la \alert{horizontal en la noche}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org0fa8655}]{Backtracking}
+\begin{frame}[label={sec:org1860f2d}]{Backtracking}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/BackTracking.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org4419369}]{Separación con backtracking}
+\begin{frame}[label={sec:orgfd27fc2}]{Separación con backtracking}
 \begin{center}
 \includegraphics[angle=90,width=.9\linewidth]{../figs/AbacoHorizBT_Ene10.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org66137b8}]{Limitación de ángulo}
+\begin{frame}[label={sec:org9ef9342}]{Limitación de ángulo}
 \begin{itemize}
 \item Es habitual limitar el ángulo de inclinación a valores máximos alrededor de 70° por motivos estructurales (protección frente al viento)
 
@@ -329,10 +331,10 @@ la \alert{horizontal en la noche}.
 \end{frame}
 
 \subsection{Elección de separaciones}
-\label{sec:orgda7da7d}
+\label{sec:org052ebb7}
 
 
-\begin{frame}[label={sec:org11ebc42}]{Elección de separaciones}
+\begin{frame}[label={sec:org12cbf84}]{Elección de separaciones}
 La \alert{separación óptima} entre elementos (seguidores o estructuras
 estáticas) es aquella que conduce al \alert{mínimo valor del coste de la
 energía} producida por el sistema:
@@ -350,7 +352,7 @@ zanjas).
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org4eb8606}]{Elección de separaciones}
+\begin{frame}[label={sec:org562cd74}]{Elección de separaciones}
 \begin{itemize}
 \item Esta separación óptima \alert{depende} de las \alert{estructuras elegidas} y de
 las \alert{condiciones económicas} de los elementos.
@@ -362,7 +364,7 @@ condiciones del terreno} (fronteras, irregularidades, vaguadas, etc.)
 
 
 
-\begin{frame}[label={sec:org69f4049}]{ROT y Coste de la energía producida}
+\begin{frame}[label={sec:org8567bf4}]{ROT y Coste de la energía producida}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{itemize}
@@ -386,9 +388,9 @@ $$C_p = C_c + C_A + C_{PV}$$
 \end{frame}
 
 \section{Resumen}
-\label{sec:org851e327}
+\label{sec:org9009c82}
 
-\begin{frame}[label={sec:org040a69d}]{Ocupación de terreno y productividad}
+\begin{frame}[label={sec:org9fbadc4}]{Ocupación de terreno y productividad}
 \begin{center}
 \begin{tabular}{lrl}
 SFCR & ROT & Productividad\\
